--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "laravelcollective/html": "^6.2",
+        "realrashid/sweet-alert": "^5.1",
+        "uxweb/sweet-alert": "^2.0",
         "yajra/laravel-datatables": "1.5",
         "yajra/laravel-datatables-oracle": "^9.0"
     },
