--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/ui": "^2.0",
         "laravelcollective/html": "^6.2",
         "realrashid/sweet-alert": "^5.1",
+        "spatie/laravel-medialibrary": "^9.0",
         "uxweb/sweet-alert": "^2.0",
         "yajra/laravel-datatables": "1.5",
         "yajra/laravel-datatables-oracle": "^9.0"
