--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2.5",
         "cviebrock/eloquent-sluggable": "^7.0",
+        "doctrine/dbal": "^2.6",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
@@ -21,6 +22,7 @@
         "laravelcollective/html": "^6.2",
         "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-medialibrary": "^9.0",
+        "stripe/stripe-php": "^8.10",
         "uxweb/sweet-alert": "^2.0",
         "yajra/laravel-datatables": "1.5",
         "yajra/laravel-datatables-oracle": "^9.0"
