add stripe variables

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,8 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FRONTPAGE_VERIFY_URL=http://front.test/verify/
 SCRIBE_AUTH_KEY=
+
+
+
+STRIPE_KEY=
+STRIPE_SECRET=
