--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,14 @@
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "^7.2.0",
         "intervention/image": "^2.5",
         "laravel/framework": "^7.0",
         "laravel/passport": "^9.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "laravelcollective/html": "^6.2",
+        "pusher/pusher-php-server": "^6.1.0",
         "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-medialibrary": "^9.0",
         "stripe/stripe-php": "^8.10",
